vlib/v/checker/tests/struct_ptr_cast_zero_err.vv
struct Context {}

const a = 0

b := 0

_ = &Context(0)
_ = &Context(a)
_ = &Context(b)
